--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -49,3 +49,11 @@
     }
   }
 }
+
+@media (min-width: 1024px) {
+  .settings {
+    .settings-row {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
